fix(mod): preserve authored order in task2 metadata sets